<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- android base fonts -->
    <string name="font_sans_serif">sans-serif</string>
    <!-- roboto regular              -->
    <string name="font_sans_serif_light">sans-serif-light</string>
    <!-- roboto light                -->
    <string name="font_sans_serif_condensed">sans-serif-condensed</string>
    <!-- roboto condensed            -->
    <string name="font_sans_serif_thin">sans-serif-thin</string>
    <!-- roboto thin (android 4.2)   -->
    <string name="font_sans_serif_medium">sans-serif-medium</string>
    <!-- roboto medium (android 5.0) -->

    <!-- Dreawer -->
    <string name="drawer_empty">Пустой</string>

    <string name="search">Search...</string>
    <string name="filter_hint">Filter...</string>
    <string name="refresh">Refresh</string>
    <string name="edit">Edit</string>
    <string name="action_exit">Exit</string>
    <string name="action_settings">Опции</string>

    <string name="app_name">Angry Greg</string>
    <string name="loading">Загрузка...</string>
    <string name="error">Error occurred!</string>
    <string name="error_network">Please check\nconnection...</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="example_html">
        <![CDATA[
            &nbsp;&nbsp;&gt;<b> </b>&gt;<b> <b><i><font color="6060b0">963.Rufim</font></i></b></b><br>
            &nbsp;&nbsp;&gt;<b>sadfsadfasdfasfasfasfsadf </b><br>
            &nbsp;&nbsp;asdfasdfasfadfasdfds<br>
            &nbsp;&nbsp;<br>
        ]]>
    </string>


    <string name="users">Users</string>
    <string name="user">User</string>
    <string name="profile_edit">User edit</string>
    <string name="profile_create">Create</string>

    <string name="ready">Ready</string>
    <string name="next">Следующий</string>
    <string name="back">Назад</string>
    <string name="back_to_exit">Нажмите назад для выхода</string>
    <string name="choose_file">Выберите Файл</string>
    <string name="login_phone">Phone Number</string>
    <string name="login_phone_error">Enter correct phone</string>
    <string name="login_password">Password</string>
    <string name="login_password_error">Enter password</string>
    <string name="login_continue">Continue</string>
    <string name="login_wrong">Wrong phone or password!</string>
    <string name="login_loading">Authorization…</string>
    <string name="login_forget">Forgot your password?</string>
    <string name="nopoints">no points</string>
    <string name="restore">Restore</string>
    <string name="input_code">Code from the SMS</string>
    <string name="wait_code1"></string>
    <string name="wait_code2">seconds left to send new SMS</string>
    <string name="send">Send</string>
    <string name="empty_code">Enter the code from the SMS</string>
    <string name="points">%d points</string>
    <string name="points_cups">%1$d points, %2$d cups</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_dots">Phone Number: </string>
    <string name="share">Share</string>
    <string name="user_show_qr">Show this QR-code to collect points</string>
    <string name="user_full">You can get free coffee!</string>
    <string name="user_points">You have %1$d points, %2$d left to get free coffee</string>
    <string name="user_points_and_cups">You have %1$d points and %2$d cups of coffee, %3$d left to get free coffee</string>
    <string name="user_list_add">Add user</string>
    <string name="user_list_delete">Delete users</string>
    <string name="edit_user_points">Current points %d</string>
    <string name="edit_user_points_and_cups">Current points %1$d and %2$d cups of coffee</string>
    <string name="qr_scanner_camera_not_found">Camera not found</string>
    <string name="qr_scanner_qr_not_found">QR not found</string>
    <string name="profile_password">Password</string>
    <string name="profile_points">Points count</string>
    <string name="profile_is_admin">Is admin?</string>
    <string name="profile_city">Город</string>
    <string name="profile_address">Адрес</string>
    <string name="profile_name">Name</string>
    <string name="profile_name_dots">Name: </string>
    <string name="profile_phone">Phone</string>
    <string name="profile_gender">Пол</string>
    <string name="profile_male">М</string>
    <string name="profile_female">Ж</string>
    <string name="profile_birthdate_pattern">%1$02d-%2$02d-%3$04d</string>
    <string name="profile_birthdate">Birthday</string>
    <string name="profile_payment_cards">Мои платежные карты</string>
    <string name="profile_addresses">Мои адреса доставки</string>
    <string name="profile_orders">Moи заказы</string>
    <string name="profile_save_success">User saved!</string>
    <string name="profile_save">Save </string>
    <string name="save">Save </string>
    <string name="edit_user_add_points">Add points</string>
    <string name="edit_user_remove_coffee">Give free coffee</string>
    <string name="free_coffee_got_it">Got it</string>
    <string name="user_already">User with this phone number \n already exists</string>
</resources>
