<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ScrollView
            android:layout_width="match_parent"
            android:fillViewport="true"
            android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="fill_parent">
            <ImageView android:id="@+id/profile_image"
                       android:layout_width="match_parent"
                       android:src="@drawable/ms90"
                       android:scaleType="centerCrop"
                       android:adjustViewBounds="true"
                       android:layout_height="240dp"/>
            <LinearLayout android:orientation="vertical"
                          android:layout_width="fill_parent"
                          android:layout_margin="@dimen/spacing_large"
                          android:layout_height="wrap_content">
                <EditText android:layout_width="match_parent"
                          android:id="@+id/profile_name"
                          android:hint="@string/profile_name"
                          style="@style/edit_text"/>
                <View style="@style/horizontal_border"
                      android:layout_marginTop="@dimen/spacing_medium"
                      android:layout_marginBottom="@dimen/spacing_medium"/>

                <EditText android:layout_width="match_parent"
                          android:id="@+id/profile_phone"
                          android:hint="@string/profile_phone"
                          style="@style/edit_text"/>
                <View style="@style/horizontal_border"
                      android:layout_marginTop="@dimen/spacing_medium"
                      android:layout_marginBottom="@dimen/spacing_medium"/>


                <LinearLayout android:orientation="horizontal"
                              android:layout_width="fill_parent"
                              android:layout_margin="@dimen/spacing_large"
                              android:layout_height="wrap_content">
                    <TextView android:layout_width="wrap_content"
                              android:text="@string/profile_birthdate"
                              android:textSize="@dimen/text_large"
                              android:layout_height="wrap_content"/>
                    <View style="@style/horizontal_spacer"/>
                    <TextView android:id="@+id/profile_birthdate"
                              android:layout_width="wrap_content"
                              android:clickable="true"
                              android:textSize="@dimen/text_large"
                              android:text="@string/profile_birthdate_pattern"
                              android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/spacing_large"
            android:id="@+id/profile_save_user"
            android:visibility="gone"
            app:cardPreventCornerOverlap="false"
            app:cardCornerRadius="6dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profile_save"
                android:layout_gravity="bottom|center_horizontal"
                android:padding="@dimen/spacing_large"
                android:text="@string/profile_save"
                style="@style/button"/>
    </android.support.v7.widget.CardView>
</RelativeLayout>