<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/remember_phone_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_call_black" />

                    <EditText
                        android:id="@+id/remember_phone"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:ems="10"
                        android:hint="@string/login_phone"
                        android:inputType="phone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:id="@+id/remember_send"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/restore"
                        android:padding="5dp"
                        android:textColor="@color/light_blue"
                        android:textSize="@dimen/text_super_nano"
                        android:textStyle="bold"
                        android:clickable="true"
                        android:gravity="center" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/remember_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_lock_black" />

                    <EditText
                        android:id="@+id/remember_password"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:ems="10"
                        android:hint="@string/input_code"
                        android:inputType="phone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:id="@+id/remember_enter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/send"
                        android:padding="5dp"
                        android:textColor="@color/light_blue"
                        android:textSize="@dimen/text_super_nano"
                        android:textStyle="bold"
                        android:clickable="true"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginTop="40dp">

                    <TextView
                        android:id="@+id/remember_wait"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:padding="5dp"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/text_huge"
                        android:textStyle="bold"
                        android:clickable="false"
                        android:gravity="center" />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>